--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,104 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Jomolhari&display=swap');
-
-
 * {
  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-
-
-
-/* --- General --- */
-body {
-   
- 
-  font-family: "Jomolhari", serif; 
-  font-weight: 400;
-  font-style: normal;
-
-  margin: 0;
-  padding: 0;
-  
-
-}
-  /*background-color:  #FFD1DC;*/
-/*background-color: #FFBCD9;*/
-/*background-color: #EFBBCC;*/
-/*background-color: #CC8899;*/
-/*background-color: #F1ABB9;/*
-
-
-/* --- Navbar --- */
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 30px;
-  background-color:  #fb8daa;
-}
-
-
-/* IMS Cosmetics */
-nav .brand {
-  font-weight: 700;
-  font-size: 25px;
-  color: #ec1414;
-   /* color: #222222;*/
-
-}
-
-/* UserDashboard link */
-
-nav .brand {
-  font-weight: 700;
-  font-size: 25px;
-  color: #222222;
-
-}
-
-nav a {
-  margin-right: 15px;
-  font-weight: 800;
-  color: #555555;
-
-}
-
-
-/* Log out button */
-
-nav button {
-  
-background-color: #fb8daa;
-  border: #222222;
-  padding: 6px 12px;
-  border-radius: 6px;
-  margin-left: 10px;
-  border-radius: 10px;
-  font-size: 15px;
-}
-
-nav button:hover {
-  background-color: #fc7a9c;
-}
-
-
-/* --- FORM CONTAINER --- */
-.form-container {
-  width: 900px;
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-  margin: 120px auto;
-  padding: 40px;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.00);
-  
-  
-}
-
 
 /* --- Form Container --- */
 .ims-logo {
@@ -129,14 +33,14 @@ nav button:hover {
 }
 
 
-.form-container h2 {
+/*.form-container h2 {
   text-align: center;
   margin-bottom: 25px;
   font-weight: 600;
   color: #000000;
-}
+}*/
 
-.form-container {
+/*.form-container {
   width: 900px;
   height: 50vh;
   display: flex;
@@ -148,15 +52,8 @@ nav button:hover {
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.00); /* soft shadow */;
   
   
-}
+*/
 
-.form-container h2 {
-  text-align: center;
-  margin-bottom: 25px;
-  font-weight: 600;
-  color: #000000;
-
-}
 .form-container input {
   width: 100%;
   padding: 12px;
@@ -241,7 +138,6 @@ height: 400px;
 box-shadow: 0 4px 12px rgba(0,0,0,0.15);
 
 }
-
 
 .login-header {
   display: flex;
@@ -342,304 +238,4 @@ justify-content: center;
 margin-right: 12px;
 /*background-image: url("src/logo.png");*/
 
-}
-
-
-/* --- Dashboard --- */
-.dashboard {
-  text-align: center;
-  margin-top: 80px;
-}
-
-.dashboard button {
-  margin-top: 20px;
-  padding: 12px 18px;
-  background-color: #333333;
-  color: rgb(255, 255, 255);
-  border: none;
-  border-radius: 8px;
-  font-weight: 600;
-}
-
-.dashboard button:hover {
-  background-color: #555555;
-}
-
-/* --- Tables --- */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-/*  background-color: #ffffff; */
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
-}
-
-table th,
-table td {
-  padding: 12px;
-  text-align: left;
-  border-bottom: 1px solid #fff4f4;
-}
-
-table th {
-  background-color: #f7f7f7; /* very light gray header */
-  color: #333333;
-  font-weight: 600;
-}
-
-table tr:nth-child(even) {
-  background-color: #fafafa; /* subtle gray for rows */
-}
-
-table tr.low-stock {
-  background-color: #ffecec; /* optional highlight */
-}
-
-table a {
-  color: #333333;
-  font-weight: 500;
-}
-
-/* --- Links as buttons --- */
-.button-link {
-  display: inline-block;
-  margin: 10px 0;
-  padding: 10px 15px;
-  background-color: #333333;
-  color: rgb(165, 48, 48);
-  border-radius: 8px;
-  font-weight: 500;
-  text-align: center;
-}
-
-.button-link:hover {
-  background-color: #555555;
-}
-
-.product-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.product-card {
-  padding: 15px;
-  background-color: #ffffff;
-  border-radius: 12px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.product-card h3 {
-  margin: 10px 0 5px 0;
-}
-
-.product-card p {
-  margin: 4px 0;
-}
-
-.product-card button {
-  margin-top: 10px;
-}
-.product-card.low-stock {
-  border: 2px solid #ff4d4f; /* red highlight for low stock */
-}
-
-
-
-/*user dashboard*/
-
-.dashboard-container {
-  padding: 40px;
-  text-align: center;
- /* background-color: #fb7b95;
-  min-height: 81vh;
-  padding: 40px 0;
-  overflow: hidden;*/
-}
-
-
-.dashboard-title {
-  font-size: 32px;
-  font-weight: bold;
-  margin-bottom: 30px;
-}
-
-.dashboard-stats {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 40px;
-}
-
-.stat-card {
-  background: white;
-  padding: 20px 30px;
-  border-radius: 12px;
-  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-}
-
-.stat-card h2 {
-  font-size: 28px;
-  margin: 0;
-}
-
-.stat-card p {
-  margin: 0;
-  margin-top: 5px;
-  font-size: 14px;
-  color: #555;
-}
-
-.dashboard-actions {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  width: 260px;
-  margin: 0 auto 20px;
-}
-
-.btn-action {
-  padding: 12px;
-  background-color: #ffffff;
-  border-radius: 8px;
-  text-decoration: none;
-  display: block;
-  font-size: 16px;
-  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
-}
-
-.btn-action:hover {
-  opacity: 0.85;
-  background-color: #fc7a9c;
-}
-
-.btn-logout {
-  margin-top: 20px;
-  background: #ff4b4b;
-  color: white;
-  padding: 12px 25px;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.btn-logout:hover {
-  background: #e33a3a;
-}
-
-
-.UserProducts {
-  min-height: 100vh;
-  background-color: #b1adad; /* light gray so it's not totally white */
-  padding: 20px;
-}
-
-/*userproducts*/
-.products-container {
-  padding: 20px;
-  max-width: 1200px;
-  margin: auto;
-}
-
-.product-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-
-  flex-direction: column;
-  gap: 20px;
-}
-
-.product-card {
-  width: 300px;
-  background: white;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-  /*max-width: 600px;*/
-
-}
-
-.product-card h3 {
-  margin: 0 0 5px 0;
-  font-size: 20px;
-}
-
-.btn-addstock {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 10px 20px;
-  background: black;
-  color: white;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.btn-addstock:hover {
-  background: #333;
-}
-
-
-/* Stock reveived  */
-
-/* ===== MODAL OVERLAY ===== */
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-}
-
-/* ===== MODAL BOX ===== */
-.modal-content {
-  background: #fff;
-  padding: 25px;
-  border-radius: 12px;
-  width: 400px;
-}
-
-.modal-content h2 {
-  margin-bottom: 20px;
-}
-
-/* ===== BUTTONS ===== */
-.modal-buttons {
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-  margin-top: 20px;
-}
-
-/* search dropdown */
-
-.search-dropdown {
-  position: absolute;
-  background: white;
-  border: 1px solid #ccc;
-  width: 250px;
-  margin-top: 5px;
-  border-radius: 8px;
-  z-index: 100;
-}
-
-.dropdown-item {
-  padding: 10px;
-  cursor: pointer;
-}
-
-.dropdown-item:hover {
-  background: #f0f0f0;
 }
